# ereadifier

./: Cargo.toml  Dockerfile  LICENSE  PRESETS.md  README.md  ROADMAP.md  format_presets.py  presets.toml
.github/workflows/: container.yml  presets-md.yml
src/: main.rs
