[package]
name = "ereadifier"
version = "0.3.1"
edition = "2024"

[dependencies]
bytes = "1.11"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["default-formats"] }
regex = "1.12"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["multipart", "server"] }
webp = "0.3"
