[package]
name = "ereadifier"
version = "0.3.3"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
bytes = "1.11"
chrono = "0.4"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["default-formats"] }
regex = "1.12"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["multipart", "server"] }
webp = "0.3"
